--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^2.8.8",
     "sequelize-typescript": "^2.1.5",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.0"
   },
   "lint-staged": {
