Add video share route

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DB_PASSWORD=postgres
 DB_USERNAME=postgres
 DB_NAME=postgres
 DB_HOST=localhost
+
+YOUTUBE_API_KEY=AIzaSyBfnBBii92pI7TPEFrr4Gzxwo1DBbbXcN4
