--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.32.0"
+    "sequelize": "^6.32.0",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.4",
