--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_PORT=5432
 DB_PASSWORD=postgres
 DB_USERNAME=postgres
 DB_NAME=postgres
-DB_HOST=localhost
+DB_HOST=db
 
 YOUTUBE_API_KEY=AIzaSyBfnBBii92pI7TPEFrr4Gzxwo1DBbbXcN4
