--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "@middlewares/*": ["middlewares/*"],
       "@shared/*": ["shared/*"],
     },
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "noImplicitAny": false,
   },
   "include": ["src"],
   "exclude": ["node_modules"],
