--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
+    "start": "ts-node src/index.ts",
+    "start:dev": "ts-node src/index.ts dotenv_config_path=$(pwd)/.env.local",
     "lint": "eslint --fix \"src/**/*{ts,js}\"",
     "format": "prettier . --write \"src/**/*{ts,js,json,md}\"",
     "prepare": "husky install"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
